--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
           </div>
         </div>
         <div class="mail-text">
-          <label>Текст письма:</label>
-          <textarea name="text-feedback" rows="6" cols="61" placeholder="В свободной форме"></textarea>
+          <label for="placeholder-text">Текст письма:</label>
+          <textarea id="placeholder-text" name="text-feedback" rows="6" cols="61" placeholder="В свободной форме"></textarea>
         </div>
       </div>
       <div class="modal-button-section">
