Поправки ко второй защите

--- a/catalog.html
+++ b/catalog.html
@@ -133,117 +133,117 @@
         <div class="sorting">
           <p class="drill-title-sotring">Сортировка:</p>
           <ul class="filter-buttons-list">
-            <li><button class="filter-button filter-button-active" type="button">По цене</button></li>
-            <li><button class="filter-button" type="button">По типу</button></li>
-            <li><button class="filter-button" type="button">По функционалу</button></li>
+            <li><a class="filter-button filter-button-active" href="#">По цене</a></li>
+            <li><a class="filter-button" href="#">По типу</a></li>
+            <li><a class="filter-button" href="#">По функционалу</a></li>
           </ul>
           <ul class="sorting-button-list">
-            <li><button class="sorting-button-up sorting-button-active" type="button" aria-label="Кнопка сортировки"><svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <li><a class="sorting-button-up sorting-button-active" href="#" aria-label="Кнопка сортировки"><svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M5.66241 0L11.1624 10L0.162415 10" fill="#C5C5C5" />
-                </svg></button>
+                </svg></a>
             </li>
-            <li><button class="sorting-button-down" type="button" aria-label="Кнопка сортировки"><svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <li><a class="sorting-button-down" href="#" aria-label="Кнопка сортировки"><svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M5.66241 10L0.162415 0H11.1624" fill="#C5C5C5" />
-                </svg></button></li>
+                </svg></a></li>
           </ul>
         </div>
         <ul class="drill-list-catalog">
           <li class="drill-item">
             <div class="drill-action">
-              <button class="buy-drill" type="button">Купить</button>
-              <button class="mark-drill" type="button">В закладку</button>
+              <a class="buy-drill" href="#">Купить</a>
+              <a class="mark-drill" href="#">В закладку</a>
             </div>
             <p class="drill-size">
               <img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
             </p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
             <span class="old-price">30500 Р.</span>
-            <button class="buy-button" type="button">25500 Р.</button>
+            <a class="buy-button" href="#">15500 Р.</a>
           </li>
           <li class="drill-item">
             <div class="drill-action">
-              <button class="buy-drill" type="button">Купить</button>
-              <button class="mark-drill" type="button">В закладку</button>
+              <a class="buy-drill" href="#">Купить</a>
+              <a class="mark-drill" href="#">В закладку</a>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
             <span class="old-price">30500 Р.</span>
-            <button class="buy-button" type="button">25500 Р.</button>
+            <a class="buy-button" href="#">15500 Р.</a>
           </li>
           <li class="drill-item new-product">
             <div class="drill-action">
-              <button class="buy-drill" type="button">Купить</button>
-              <button class="mark-drill" type="button">В закладку</button>
+              <a class="buy-drill" href="#">Купить</a>
+              <a class="mark-drill" href="#">В закладку</a>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 6000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
             <span class="old-price">32500 Р.</span>
-            <button class="buy-button" type="button">25500 Р.</button>
+            <a class="buy-button" href="#">15500 Р.</a>
           </li>
           <li class="drill-item new-product">
             <div class="drill-action">
-              <button class="buy-drill" type="button">Купить</button>
-              <button class="mark-drill" type="button">В закладку</button>
+              <a class="buy-drill" href="#">Купить</a>
+              <a class="mark-drill" href="#">В закладку</a>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 3000</h3>
             <span class="old-price">22500 Р.</span>
-            <button class="buy-button" type="button">15500 Р.</button>
+            <a class="buy-button" href="#">15500 Р.</a>
           </li>
           <li class="drill-item">
             <div class="drill-action">
-              <button class="buy-drill" type="button">Купить</button>
-              <button class="mark-drill" type="button">В закладку</button>
+              <a class="buy-drill" href="#">Купить</a>
+              <a class="mark-drill" href="#">В закладку</a>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
             <span class="old-price">30500 Р.</span>
-            <button class="buy-button" type="button">25500 Р.</button>
+            <a class="buy-button" href="#">15500 Р.</a>
           </li>
           <li class="drill-item new-product">
             <div class="drill-action">
-              <button class="buy-drill" type="button">Купить</button>
-              <button class="mark-drill" type="button">В закладку</button>
+              <a class="buy-drill" href="#">Купить</a>
+              <a class="mark-drill" href="#">В закладку</a>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 2000</h3>
-            <button class="buy-button" type="button">12500 Р.</button>
+            <a class="buy-button" href="#">15500 Р.</a>
           </li>
           <li class="drill-item new-product">
             <div class="drill-action">
-              <button class="buy-drill" type="button">Купить</button>
-              <button class="mark-drill" type="button">В закладку</button>
+              <a class="buy-drill" href="#">Купить</a>
+              <a class="mark-drill" href="#">В закладку</a>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 3000</h3>
             <span class="old-price">22500 Р.</span>
-            <button class="buy-button" type="button">15500 Р.</button>
+            <a class="buy-button" href="#">15500 Р.</a>
           </li>
           <li class="drill-item">
             <div class="drill-action">
-              <button class="buy-drill" type="button">Купить</button>
-              <button class="mark-drill" type="button">В закладку</button>
+              <a class="buy-drill" href="#">Купить</a>
+              <a class="mark-drill" href="#">В закладку</a>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
             <span class="old-price">30500 Р.</span>
-            <button class="buy-button" type="button">25500 Р.</button>
+            <a class="buy-button" href="#">15500 Р.</a>
           </li>
           <li class="drill-item new-product">
             <div class="drill-action">
-              <button class="buy-drill" type="button">Купить</button>
-              <button class="mark-drill" type="button">В закладку</button>
+              <a class="buy-drill" href="#">Купить</a>
+              <a class="mark-drill" href="#">В закладку</a>
             </div>
             <p class="drill-size"><img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000"></p>
             <h3 class="drill-title">Перфоратор BOSCH BFG 2000</h3>
-            <button class="buy-button" type="button">25500 Р.</button>
+            <a class="buy-button" href="#">15500 Р.</a>
           </li>
         </ul>
         <ul class="pagination">
-          <li><button class="pagination-button pagination-active" type="button">1</button></li>
-          <li><button class="pagination-button" type="button">2</button></li>
-          <li><button class="pagination-button" type="button">3</button></li>
-          <li><button class="pagination-button" type="button">СЛЕДУЮЩАЯ</button></li>
+          <li><a class="pagination-button pagination-active" type="button">1</a></li>
+          <li><a class="pagination-button" href="#">2</a></li>
+          <li><a class="pagination-button" href="#">3</a></li>
+          <li><a class="pagination-button" href="#">СЛЕДУЮЩАЯ</a></li>
         </ul>
       </div>
     </div>
