--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link href="css/style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&family=PT+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./js/modal.js">
 </head>
 
 <body>
@@ -21,9 +22,9 @@
       <a class="main-logo" href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
       <input class="search" type="search" id="search" placeholder="Поиск:">
       <label class="visually-hidden" for="search">Поиск</label>
-      <button class="bookmarks">Закладки: 0</button>
-      <button class="basket">Корзина: 0</button>
-      <button class="ordering">Оформить заказ</button>
+      <a class="bookmarks" href="#">Закладки: 0</a>
+      <a class="basket" href="#">Корзина: 10</a>
+      <a class="ordering" href="#">Оформить заказ</a>
     </div>
     <div class="wrapper header-container">
       <div class="nav-down">
@@ -102,52 +103,52 @@
       <ul class="drill-list">
         <li class="drill-item">
           <div class="drill-action">
-            <button class="buy-drill" type="button">Купить</button>
-            <button class="mark-drill" type="button">В закладку</button>
+            <a class="buy-drill" href="#">Купить</a>
+            <a class="mark-drill" href="#">В закладку</a>
           </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor1.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
           </p>
           <h3 class="drill-title">Перфоратор BOSCH BFG 9000</h3>
           <span class="old-price">32500 Р.</span>
-          <button class="buy-button" type="button">25500 Р.</button>
+            <a class="buy-button" href="#">15500 Р.</a>
         </li>
         <li class="drill-item new-product">
           <div class="drill-action">
-            <button class="buy-drill" type="button">Купить</button>
-            <button class="mark-drill" type="button">В закладку</button>
+            <a class="buy-drill" href="#">Купить</a>
+            <a class="mark-drill" href="#">В закладку</a>
           </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
           </p>
           <h3 class="drill-title">Перфоратор BOSCH BFG 3000</h3>
           <span class="old-price">22500 Р.</span>
-          <button class="buy-button" type="button">15500 Р.</button>
+          <a class="buy-button" href="#">15500 Р.</a>
         </li>
 
         <li class="drill-item">
           <div class="drill-action">
-            <button class="buy-drill" type="button">Купить</button>
-            <button class="mark-drill" type="button">В закладку</button>
+            <a class="buy-drill" href="#">Купить</a>
+            <a class="mark-drill" href="#">В закладку</a>
           </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
           </p>
           <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
           <span class="old-price">30500 Р.</span>
-          <button class="buy-button" type="button">25500 Р.</button>
+          <a class="buy-button" href="#">15500 Р.</a>
         </li>
         <li class="drill-item new-product">
           <div class="drill-action">
-            <button class="buy-drill" type="button">Купить</button>
-            <button class="mark-drill" type="button">В закладку</button>
+            <a class="buy-drill" href="#">Купить</a>
+            <a class="mark-drill" href="#">В закладку</a>
           </div>
           <p class="drill-size">
             <img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
           </p>
           <h3 class="drill-title">Перфоратор BOSCH BFG 2000</h3>
           <span class="old-price">22500 Р.</span>
-          <button class="buy-button" type="button">15500 Р.</button>
+          <a class="buy-button" href="#">15500 Р.</a>
         </li>
       </ul>
     </section>
@@ -193,12 +194,11 @@
     <div class="wrapper">
       <section class="section-about-second">
         <div class="element-about">
-          <h2 class="title">Компания «ТЕХНОМАРТ»</h2>
+          <h2 class="title service-title">Компания «ТЕХНОМАРТ»</h2>
           <p class="about-item">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для<br> ремонта и
             строительства не оставит равнодушными любителей сэкномить на<br>
             гастарбайтерах.</p>
-          <p></p>
-          <p class="about-item">Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+          <p class="about-item about-item-fix">Мы можем доставить ваш товар в самые отдаленные точки России!<br>
             Техномарт работает со многими транспортными компаниями:</p>
           <ul class="service-tips">
             <li class="tips">Деловые линии</li>
@@ -208,11 +208,11 @@
           <a class="button" href="#">Подробнее о компании</a>
         </div>
         <div class="element-about">
-          <h2 class="title">Контакты</h2>
+          <h2 class="title service-title">Контакты</h2>
           <p class="about-item">Вы можете забрать товар сами,<br>
             заехав в наш офис:</p>
-          <button class="button-modal-map" type="button" aria-label="Карта"><img src="img/map.jpg" width="300" height="158" alt="Большая Конюшенная ул., 19"></button>
-          <button class="button button-map" type="button">Заблудились? напишите нам</button>
+          <img id="btn-map-modal" class="map-button" src="img/map.jpg" width="300" height="158" alt="Большая Конюшенная ул., 19">
+          <button id="btn-modal" class="button button-map" type="button">Заблудились? напишите нам</button>
         </div>
       </section>
     </div>
@@ -296,10 +296,10 @@
       </div>
     </div>
   </footer>
-  <section class="modal" hidden>
+  <section id='modal' class="modal" hidden>
     <h2 class="visually-hidden">Модальное окно</h2>
     <form class="feedback-form" method="get" action="https://echo.htmlacademy.ru" target="_blank">
-      <button class="modal-close-button" type="button" aria-label="Закрыть"></button>
+      <button id="modal-close-btn" class="modal-close-button" type="button" aria-label="Закрыть"></button>
       <div class="modal-wrapper">
         <div class="input-form">
           <div class="input-name">
@@ -321,10 +321,13 @@
       </div>
     </form>
   </section>
-  <section class="modal-map" hidden>
+  <section id="modal-map" class="modal-map" hidden>
     <h2 class="visually-hidden">Модальная карта</h2>
+    <button id="modal-close-btn-map" class="modal-close-button" type="button" aria-label="Закрыть"></button>
     <iframe
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
-      width="943" height="487" allowfullscreen title="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></iframe>
+      width="943" height="488" allowfullscreen title="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург"></iframe>
   </section>
+  <script src="./js/modal.js"></script>
+  <script src="./js/modal-map.js"></script>
 </body>
