--- a/catalog.html
+++ b/catalog.html
@@ -240,7 +240,7 @@
           </li>
         </ul>
         <ul class="pagination">
-          <li><a class="pagination-button pagination-active" type="button">1</a></li>
+          <li><a class="pagination-button pagination-active" href="#" >1</a></li>
           <li><a class="pagination-button" href="#">2</a></li>
           <li><a class="pagination-button" href="#">3</a></li>
           <li><a class="pagination-button" href="#">СЛЕДУЮЩАЯ</a></li>
