Правки ко второй защите

--- a/catalog.html
+++ b/catalog.html
@@ -46,12 +46,13 @@
       </div>
       <nav class="main-navigation">
         <ul class="navigation">
-          <li><a class="nav-button" href="index.html">Главная</a></li>
+          <li><a class="nav-button nav-button-first" href="index.html">Главная</a></li>
           <li><a class="nav-button" href="#">Компания</a></li>
           <li><a class="nav-button" href="catalog.html">Каталог</a></li>
+          <li><a class="nav-button" href="#">Новости</a></li>
           <li><a class="nav-button" href="#">Спецпредложения</a></li>
           <li><a class="nav-button" href="#">Доставка</a></li>
-          <li><a class="nav-button" href="#">Контакты</a></li>
+          <li><a class="nav-button nav-button-last" href="#">Контакты</a></li>
         </ul>
       </nav>
     </div>
