--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
       </div>
       <nav class="main-navigation">
         <ul class="navigation">
-          <li><a class="nav-button" href="index.html">Главная</a></li>
+          <li><a class="nav-button nav-button-first" href="index.html">Главная</a></li>
           <li><a class="nav-button" href="#">Компания</a></li>
           <li><a class="nav-button" href="catalog.html">Каталог</a></li>
+          <li><a class="nav-button" href="#">Новости</a></li>
           <li><a class="nav-button" href="#">Спецпредложения</a></li>
           <li><a class="nav-button" href="#">Доставка</a></li>
-          <li><a class="nav-button" href="#">Контакты</a></li>
+          <li><a class="nav-button nav-button-last" href="#">Контакты</a></li>
         </ul>
       </nav>
     </div>
@@ -170,7 +171,7 @@
     </section>
     <section class="basic-background">
       <div class="wrapper section-about">
-        <h2 class="title">Сервисы</h2>
+        <h2 class="title title-tips">Сервисы</h2>
         <p class="about-item about-item-service">Хороший интернет-магазин отличается от плохого не только ценами!<br>
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         <div class="section-down">
@@ -180,7 +181,7 @@
             <li><button class="button-toogle" type="button">Кредит</button></li>
           </ul>
           <div class="title-deliv">
-            <h2 class="service-title">Доставка</h2>
+            <h2 class="service-title-tips">Доставка</h2>
             <p class="about-item">
               Мы с удовольствием доставим ваш товар прямо<br>
               к вашему подъезду совершенно бесплатно!<br>
