Провки к последней защите

--- a/catalog.html
+++ b/catalog.html
@@ -77,10 +77,10 @@
             <legend class="filter-heading">Цена:</legend>
             <div class="range-controls">
               <div class="scale">
-                <div class="bar"></div>
+                <div class="bar" aria-label="Полоса цены"></div>
               </div>
-              <div class="toggle-min"></div>
-              <div class="toggle-max"></div>
+              <div class="toggle-min" aria-label="Слайдер мин цена"></div>
+              <div class="toggle-max" aria-label="Слайдер макс цена"></div>
             </div>
             <div class="input-price">
               <input class="input-class" name="min-price" id="price-min" type="number" value="0">
