--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           <p class="about-item">Вы можете забрать товар сами,<br>
             заехав в наш офис:</p>
           <img id="btn-map-modal" class="map-button" src="img/map.jpg" width="300" height="158" alt="Большая Конюшенная ул., 19">
-          <button id="btn-modal" class="button button-map" type="button">Заблудились? напишите нам</button>
+          <a id="btn-modal" class="button button-map" href="#" onclick="return false">Заблудились? напишите нам</a>
         </div>
       </section>
     </div>
