Поправки к последней защите

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <input class="search" type="search" id="search" placeholder="Поиск:">
       <label class="visually-hidden" for="search">Поиск</label>
       <a class="bookmarks" href="#">Закладки: 0</a>
-      <a class="basket" href="#">Корзина: 10</a>
+      <a class="basket" href="#">Корзина: 0</a>
       <a class="ordering" href="#">Оформить заказ</a>
     </div>
     <div class="wrapper header-container">
@@ -87,10 +87,10 @@
           </li>
           <li class="catalog-item sales">
             <h2>Скидка 50%</h2>
-            <a class="catalog-button" href="#">А 350 товаров</a>
+            <a class="catalog-button" href="#">На 350 товаров</a>
           </li>
           <li class="catalog-item deliver">
-            <h2>ДОСТАВКА</h2>
+            <h2>Доставка</h2>
             <a class="catalog-button" href="#">Бесплатно</a>
           </li>
         </ul>
@@ -98,7 +98,7 @@
     </section>
     <section class="wrapper">
       <div class="popular-staff">
-        <h2 class="title">Популярные товары:</h2>
+        <h2 class="title title-product">Популярные товары:</h2>
         <a class="button button-title" href="#">Все популярные товары</a>
       </div>
       <ul class="drill-list">
@@ -149,13 +149,13 @@
           </p>
           <h3 class="drill-title">Перфоратор BOSCH BFG 2000</h3>
           <span class="old-price">22500 Р.</span>
-          <a class="buy-button" href="#">15500 Р.</a>
+          <a class="buy-button" href="#">12500 Р.</a>
         </li>
       </ul>
     </section>
     <section class="popular-firms wrapper">
-      <div class="popular-staff">
-        <h2 class="title title-main">Популярные производители:</h2>
+      <div class="popular-staff title-popular-firms">
+        <h2 class="title title-product">Популярные производители:</h2>
         <a class="button button-title" href="#">Все производители</a>
       </div>
       <ul class="firms-list">
@@ -206,7 +206,7 @@
             <li class="tips">Автотрейдинг</li>
             <li class="tips">ЖелДорЭкспедиция</li>
           </ul>
-          <a class="button" href="#">Подробнее о компании</a>
+          <a class="button button-tips" href="#">Подробнее о компании</a>
         </div>
         <div class="element-about">
           <h2 class="title service-title">Контакты</h2>
@@ -238,10 +238,10 @@
               <li><a class="nav-button-footer" href="#">Контакты</a></li>
             </ul>
             <ul class="navigation-footer-second">
-              <li><a class="nav-button-footer first-button" href="#">Материал</a></li>
-              <li><a class="nav-button-footer" href="#">Техника</a></li>
-              <li><a class="nav-button-footer" href="#">Инструмент</a></li>
-              <li><a class="nav-button-footer" href="#">Спецпредлжения</a></li>
+              <li><a class="nav-button-footer second-fot-btn first-button" href="#">Материал</a></li>
+              <li><a class="nav-button-footer second-fot-btn" href="#">Техника</a></li>
+              <li><a class="nav-button-footer second-fot-btn" href="#">Инструмент</a></li>
+              <li><a class="nav-button-footer second-fot-btn" href="#">Спецпредлжения</a></li>
             </ul>
           </div>
         </div>
