--- a/catalog.html
+++ b/catalog.html
@@ -76,11 +76,13 @@
           <fieldset class="form">
             <legend class="filter-heading">Цена:</legend>
             <div class="range-controls">
+              <h2 class="visually-hidden">Слайдер цены</h2>
               <div class="scale">
-                <div class="bar" aria-label="Полоса цены"></div>
+              <div class="bar"></div>
               </div>
-              <div class="toggle-min" aria-label="Слайдер мин цена"></div>
-              <div class="toggle-max" aria-label="Слайдер макс цена"></div>
+              <div class="toggle-min"></div>
+              <div class="toggle-max"></div>
+
             </div>
             <div class="input-price">
               <input class="input-class" name="min-price" id="price-min" type="number" value="0">
